--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,10 @@ div {
   vertical-align: middle;
 }
 
+body {
+  align-items: center;
+	display: flex;
+  justify-content: center;
+  margin-top: 24px;
+}
+
