--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@ body {
   flex-direction: column;
   display: inline-block;
   margin: 0 0.5rem;
-
-  animation: bounce; 
+  animation: zoomInDown; 
   animation-duration: 2s; 
 }
 
@@ -19,6 +18,9 @@ section.board {
   grid-template-rows: repeat(3, 10vmin);
   grid-template-columns: repeat(3, 10vmin);
   grid-gap: 0vmin;
+  box-shadow: inset 0 -3em 3em rgba(42, 40, 40, 0.1),
+  0 0  0 2px rgb(124, 122, 122),
+  0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
 
 div {
@@ -40,9 +42,12 @@ body {
 }
 
 #message {
+  font-family: 'Qwitcher Grypen', cursive;
+  font-family: 'Shadows Into Light', cursive;
+  color: rgb(224, 64, 64);
   display: inline-block;
   margin: 0 0.5rem;
-  animation: bounce; 
+  animation: backInDown; 
   animation-duration: 2s; 
   margin-bottom: 20px;
 
@@ -54,8 +59,14 @@ h1 {
   font-size: 60px;
   display: inline-block;
   margin: 0 0.5rem;
-  animation: bounce; 
+  animation: backInDown; 
   animation-duration: 2s; 
   margin-bottom: 25px;
 }
 
+#reset-button {
+  border: 3px solid black;
+  box-shadow: inset 0 -3em 3em rgba(42, 40, 40, 0.1),
+  0 0  0 2px rgb(124, 122, 122),
+  0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
